Local working swagger generation
