# routes/index.js
@@ -1,8 +1,10 @@
 const express = require('express');
 const router = express.Router();
+const contactsRoutes = require('./contacts');
+const swaggerRoutes = require('./swagger');
 
-router.use('/contacts', require('./contacts'));
+router.use('/contacts', contactsRoutes);
 
-router.use('/api-docs', require('./swagger'));
+router.use('/api-docs', swaggerRoutes);
 
 module.exports = router;
